[[bin]]
name = 'joystream-node'
path = 'src/main.rs'

[package]
authors = ['Joystream']
build = 'build.rs'
edition = '2018'
name = 'joystream-node'
version = '1.0.1'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/joystream/substrate.git'
package = 'substrate-basic-authorship'
rev = '8bc576f5c10e189bc4bf77335b40f60d46b94949'

[dependencies.consensus]
git = 'https://github.com/joystream/substrate.git'
package = 'substrate-consensus-aura'
rev = '8bc576f5c10e189bc4bf77335b40f60d46b94949'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/joystream/substrate.git'
package = 'substrate-inherents'
rev = '8bc576f5c10e189bc4bf77335b40f60d46b94949'

[dependencies.network]
git = 'https://github.com/joystream/substrate.git'
package = 'substrate-network'
rev = '8bc576f5c10e189bc4bf77335b40f60d46b94949'

[dependencies.joystream-node-runtime]
# clone https://github.com/joystream/substrate-runtime-joystream to this path:
path = 'substrate-runtime-joystream'

[dependencies.primitives]
git = 'https://github.com/joystream/substrate.git'
package = 'substrate-primitives'
rev = '8bc576f5c10e189bc4bf77335b40f60d46b94949'

[dependencies.sr-io]
git = 'https://github.com/joystream/substrate.git'
rev = '8bc576f5c10e189bc4bf77335b40f60d46b94949'

[dependencies.substrate-cli]
git = 'https://github.com/joystream/substrate.git'
rev = '8bc576f5c10e189bc4bf77335b40f60d46b94949'

[dependencies.substrate-client]
git = 'https://github.com/joystream/substrate.git'
rev = '8bc576f5c10e189bc4bf77335b40f60d46b94949'

[dependencies.substrate-executor]
git = 'https://github.com/joystream/substrate.git'
rev = '8bc576f5c10e189bc4bf77335b40f60d46b94949'

[dependencies.substrate-service]
git = 'https://github.com/joystream/substrate.git'
rev = '8bc576f5c10e189bc4bf77335b40f60d46b94949'

[dependencies.transaction-pool]
git = 'https://github.com/joystream/substrate.git'
package = 'substrate-transaction-pool'
rev = '8bc576f5c10e189bc4bf77335b40f60d46b94949'

[dependencies.substrate-telemetry]
git = 'https://github.com/joystream/substrate.git'
package = 'substrate-telemetry'
rev = '8bc576f5c10e189bc4bf77335b40f60d46b94949'

[dependencies.grandpa]
git = 'https://github.com/joystream/substrate.git'
package = 'substrate-finality-grandpa'
rev = '8bc576f5c10e189bc4bf77335b40f60d46b94949'

[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'
